Web Inspector: inspector view top inset should not include height of web view banners https://bugs.webkit.org/show_bug.cgi?id=140076

Patch by Matt Baker <mattbaker@apple.com> on 2015-01-05
Reviewed by Anders Carlsson.

Added _totalHeightOfBanners property to WKView, which is used by the WebInspectorProxy
to calculate the correct vertical position of the Inspector view frame. The browser is
responsible for setting the property value whenever banners are installed or uninstalled from
the view.

* UIProcess/API/Cocoa/WKViewPrivate.h:
* UIProcess/API/mac/WKView.mm:
(-[WKView _setTotalHeightOfBanners:]):
(-[WKView _totalHeightOfBanners]):
* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::inspectedViewFrameDidChange):

Canonical link: https://commits.webkit.org/158074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177944 268f45cc-cd09-0410-ab3c-d52691b4dbfc